Fix spacing issues in brand logo

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,9 @@ header .container {
 .link-no-decor {
   text-decoration: none;
   color: inherit;
+  display: flex;
+  align-items: baseline;
+  gap: 0.75rem;
 }
 nav {
     display: flex;
